Change line height for mini cards to em to fix display on Firefox

--- a/client/styles/importer.less
+++ b/client/styles/importer.less
@@ -105,7 +105,7 @@ md-card md-card-header {
 md-card md-card-content {
   padding: 14px;
   font-size: 14px;
-  line-height: 22px;
+  line-height: 1.3em;
 }
 
 .card-headline {
